# BlockChat

./: .gitignore  docker-compose.yml
chat_backend/: Cargo.toml
chat_backend/migration/: Cargo.toml
chat_backend/migration/src/: lib.rs  m20241213_220758_init_schema.rs  m20250313_212955_create_chats_table.rs  m20250503_115653_chat_participants_status.rs
chat_backend/src/: main.rs  seed.rs
chat_backend/src/entities/: blocks.rs  chat_participants.rs  chats.rs  messages.rs  mod.rs  prelude.rs  roles.rs  users.rs
chat_backend/src/handlers/: chat_handler.rs  mod.rs  user_handler.rs
chat_backend/src/middleware/: claims.rs  custom_logger.rs  mod.rs
chat_backend/src/models/: chat_models.rs  mod.rs  token_model.rs  user_models.rs
chat_backend/src/routes/: chat_routes.rs  mod.rs  user_routes.rs
chat_backend/src/utils/: check_auth_user.rs  jwt.rs  mod.rs
chat_frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
chat_frontend/assets/css/: main.css
chat_frontend/components/User/: UserPopup.vue
chat_frontend/components/ui/: Button.vue  Input.vue  Popup.vue  Sidebar.vue
chat_frontend/components/ui/Table/: DataList.vue  DataTable.vue
chat_frontend/composables/: useApi.ts  useAuth.ts
chat_frontend/layouts/: admin.vue  default.vue
chat_frontend/middleware/: admin-layout.global.ts  auth.global.ts
chat_frontend/pages/: index.vue  login.vue  register.vue
chat_frontend/pages/admin/: index.vue
chat_frontend/pages/admin/users/: [id].vue  (+1 more)
chat_frontend/stores/: auth.ts  users.ts
chat_frontend/types/: RequestStatus.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: UserMainPage.tsx
frontend/src/utils/: storage.ts
(+1 files in other folders)
