[package]
name = "chat_backend"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rand = "0.9.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres"] }
serde = "1.0.216"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.11.0"

[dev-dependencies]
anyhow = "1.0.94"
