[package]
name = "chat_backend"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rand = "0.9.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres"] }
serde = "1.0.216"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.94"
